@@ -1,0 +1,14 @@
+Function: arity
+Section: programming/specific
+C-Name: arity0
+Prototype: G
+Help: arity(C): return the arity of the closure C.
+Doc: return the arity of the closure $C$.
+ \bprog
+ ? f1(x,y=0)=x+y;
+ ? arity(f1)
+ %1 = 2
+ ? f2(t,s[..])=print(t,":",s);
+ ? arity(f2)
+ %2 = 2
+ @eprog
