@@ -1082,6 +1082,13 @@ pari_add_function(entree *ep)
 /**                                                                **/
 /********************************************************************/
 
+GEN
+arity0(GEN C)
+{
+  if (typ(C)!=t_CLOSURE) pari_err_TYPE("arity", C);
+  return stoi(closure_arity(C));
+}
+
 #define ALIAS(ep) (entree *) ((GEN)ep->value)[1]
 
 entree *
