@@ -216,6 +216,7 @@ BA  45- Support call by reference in GP function: f(~L,x)=listput(~L,x+1)
 BA  46- Generic fast linear algebra using CUP decomposition
     47- [libpari] nfX_to_monic
 BA  48- new GP function derivn
+BA  49- new GP function arity
 
   Removed
      1- member functions .futu and .tufu [deprecated since 2.2]
